[REFACTOR] Security Cors